# voice-typing

./: .gitignore  .prettierrc  CMakeLists.txt  README.md  binding.gyp  forge.config.ts  forge.env.d.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.base.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
.github/workflows/: build-electron-windows.yml  build.yml  release.yml
cpp/: addon.cc  stream_whisper.cc  stream_whisper.h
docs/architecture/: structure.md
docs/drafts/: editor-block.json  editor-content.html
public/worklet/: whisperWorkletProcessor.js
resources/: Info.plist  entitlements.mac.plist
src/: App.tsx  index.js  index.tsx  main.ts  preload.ts  renderer.d.ts  renderer.ts
src/app/: home.tsx  new-dictation.tsx  project.tsx  transcript.tsx
src/backend/: db.ts
src/components/editor/: AudioRecordingControl.tsx  EditorControls.tsx  EditorElements.tsx  EditorHeader.tsx  ImportWarningDialog.tsx  RecordControls.tsx  RecordingTranscriptions.tsx  StatusBar.tsx  TitleWithInput.tsx  TranscriptTitle.tsx  TranscriptionSimulator.tsx  index.tsx  useEditor.ts
src/components/home/: CreateTranscriptDialog.tsx  SettingsDialog.tsx  index.tsx
src/components/project/: index.tsx
src/ipc/: IPC.ts  dbIPCHandlers.ts  dialogIPCHandlers.ts  preferencesIPCHandlers.ts  whisperIPC.ts  whisperIPCHandlers.ts
src/shared/: ipcPayloads.ts  models.ts
src/state/: audioAtoms.ts
src/styles/: index.css
src/utils/: audioWorklet.ts  media_devices.ts  microphone.ts  rendererElectronAPI.ts  whisperModel.ts  whisper_model.ts
(+9 files in other folders)
